--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HTML 2020</title>
+    <title>HTML</title>
 </head>
 <body>
 
-<h1><HTML 2020</h1>
+<h1>HTML2020</h1>
+<h2>Pjotr de Vos</h2>
 
 </body>
 </html>
