--- a/h01/index.html
+++ b/h01/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HTML</title>
+    <title>Hoofdstuk 1</title>
 </head>
 <body>
 
-<h1>HTML2020</h1>
-<h2>Pjotr de Vos</h2>
+<h1>Hoofdstuk 1</h1>
 
 </body>
 </html>
