--- a/h01/index.html
+++ b/h01/index.html
@@ -7,6 +7,9 @@
 <body>
 
 <h1>Hoofdstuk 1</h1>
+<p>Hello World!</p>
+
+<img src="monkey-428032_1280" alt="monkey" width="400" height="400">
 
 </body>
 </html>
