--- a/h01/index.html
+++ b/h01/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hoofdstufdsk 1</title>
+    <title>Hoofdstuk 1</title>
 </head>
 <body>
 
