--- a/h01/index.html
+++ b/h01/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1>Hoofdstuk 1</h1>
+<h1>Hoofdsvvvtuk 1</h1>
 <p>Hello World!</p>
 
 <img src="monkey.jpg" alt="Monkey" width="400" height="400">
