--- a/h01/index.html
+++ b/h01/index.html
@@ -9,7 +9,7 @@
 <h1>Hoofdstuk 1</h1>
 <p>Hello World!</p>
 
-<img src="monkey.jpg" alt="Monkey" width="400" height="400">
+<img src="img/monkey.jpg" alt="Monkey" width="400" height="400">
 
 </body>
 </html>
