--- a/ho2/index.html
+++ b/ho2/index.html
@@ -6,5 +6,23 @@
 </head>
 <body>
 
+<h1>Anime</h1>
+
+<h3>Wat is anime</h3>
+
+<p>Anime zijn japanse getekende series die je kan kijken</p>
+
+<ol>
+    <li>
+        <ol>
+            <li><a href="https://nl.wikipedia.org/wiki/Anime">WikiPedia</a></li>
+            <li><a href="https://www.anime-planet.com/users/EenPotjeMetJam/anime">Mijn lijst</a> </li>
+        </ol>
+    </li>
+</ol>
+
+<a href="Begin.html">Begin pagina</a>
+
+
 </body>
 </html>
