--- a/ho2/Begin.html
+++ b/ho2/Begin.html
@@ -14,7 +14,7 @@
 <img src="img/Melhores-Animes-1.jpg" alt="Anime" width="340" height="254" align="down">
 <img src="img/Naruto_newshot.png" alt="Naruto">
 
-<a href="index.html">Meer over anime</a>
+<a href="index.html">Meer over anime.</a>
 
 
 </body>
