--- a/ho2/Begin.html
+++ b/ho2/Begin.html
@@ -11,7 +11,7 @@
     .Text{font-size: 300%}
 </style>
 
-<img src="img/Melhores-Animes-1.jpg" alt="Anime" width="340" height="254" align="down">
+<img src="img/Melhores-Animes-1.jpg" alt="Anime" width="340" height="254">
 <img src="img/Naruto_newshot.png" alt="Naruto">
 
 <a href="index.html">Meer over anime.</a>
