--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <h2>Pjotr de Vos</h2>
 <a  href="h01/index.html">Hoofdstuk 1</a>
 <a  href="ho2/Begin.html">Hoofdstuk 2</a>
+<a  href="h03/index.html">Hooftstuk 3</a>
 
 </body>
 </html>
