--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <a  href="h01/index.html">Hoofdstuk 1</a>
 <a  href="ho2/Begin.html">Hoofdstuk 2</a>
 <a  href="h03/index.html">Hooftstuk 3</a>
+<a  href="h04/index.html">Hoofdstuk 4</a>
 
 </body>
 </html>
