--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <a  href="ho2/Begin.html">Hoofdstuk 2</a>
 <a  href="h03/index.html">Hooftstuk 3</a>
 <a  href="h04/index.html">Hoofdstuk 4</a>
+<a  href="h05/index.html">Hoofdstuk 5</a>
 
 </body>
 </html>
