--- a/h05/index.html
+++ b/h05/index.html
@@ -18,7 +18,7 @@
         <a href="Login.html">Login</a>
     </nav>
 
-    <section class="Appell">
+    <section class="Appel">
         <img class="Appel" src="img/appel.jpg" alt="Appel">
     </section>
 
