--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <a  href="h03/index.html">Hooftstuk 3</a>
 <a  href="h04/index.html">Hoofdstuk 4</a>
 <a  href="h05/index.html">Hoofdstuk 5</a>
+<a  href="h06/Index.html">Hoofdstuk 6</a>
 
 </body>
 </html>
