--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <a  href="h04/index.html">Hoofdstuk 4</a>
 <a  href="h05/index.html">Hoofdstuk 5</a>
 <a  href="h06/Index.html">Hoofdstuk 6</a>
+<a  href="h07/index.html">Hoofdstuk 7</a>
 
 </body>
 </html>
