--- a/h03/index.html
+++ b/h03/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Hoofdstuk 3</title>
+    <link rel="stylesheet" href="StyleSheet.css">
 </head>
-<body>
 
 <table border="1">
     <tr>
@@ -24,5 +24,56 @@
     </tr>
 </table>
 
+
+<br>
+
+
+<table border="1">
+    <tr>
+        <th rowspan="2">State of health</th>
+        <td colspan="2">Fasting Value</td>
+        <td>After eating</td>
+    </tr>
+    <tr>
+        <td>Minimum</td>
+        <td>Maximum</td>
+        <td>2 hours after eating</td>
+    </tr>
+    <tr>
+        <td>Healty</td>
+        <td>70</td>
+        <td>100</td>
+        <td>Less then 140</td>
+    </tr>
+    <tr>
+        <td>Pre-Diabetes</td>
+        <td>101</td>
+        <td>126</td>
+        <td>140 to 200</td>
+    </tr>
+    <tr>
+        <td>Diabetes</td>
+        <td>More then 126</td>
+        <td>N/A</td>
+        <td>More then 200</td>
+    </tr>
+</table>
+
+
+<br>
+
+<table border="1">
+
+    <tr>
+        <th rowspan="3">1</th>
+    </tr>
+    <tr>
+        <th rowspan="2">2 <br> 5</th>
+    </tr>
+    <tr>
+        <th rowspan="3">3 <br> 4 <br> 6</th>
+    </tr>
+
+</table>
 </body>
 </html>
