--- a/h05/index.html
+++ b/h05/index.html
@@ -1,49 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="StyleSheet.css">
     <meta charset="UTF-8">
-    <title>Hoofdstuk 5</title>
+    <title>Burton Education</title>
+    <link rel="stylesheet" type="text/css" href="StyleSheet.css">
 </head>
 <body>
 <div id="wrapper">
-<header>
-    <img src="img/burton_logo.png" alt="Logo">
-</header>
-
+    <header>
+        <img src="img/burton_logo.png">
+    </header>
     <nav>
         <a href="">Over ons</a>
-        <a href="">Contact</a>
         <a href="">Producten</a>
+        <a href="">Contact</a>
         <a href="Login.html">Login</a>
+        <a href="Formulier.html">Formulier</a>
     </nav>
-
-    <section class="Appel">
-        <img class="Appel" src="img/appel.jpg" alt="Appel">
+    <section class="appel">
+        <img class="appel" src="img/appel.jpg">
     </section>
-
-    <section class="Plaatjes">
-        <img class="Plaatjes" src="img/bus.jpg" alt="Bus">
-        <img class="Plaatjes" src="img/desk.jpg" alt="Desk">
-        <img class="Plaatjes" src="img/pythagoras.jpg" alt="Driehoekhomo">
+    <section class="visuals">
+        <img class="visuals" src="img/bus.jpg">
+        <img class="visuals" src="img/desk.jpg">
+        <img class="visuals" src="img/pythagoras.jpg">
     </section>
-
-    <section class="Articles">
+    <section class="tekst">
         <h1>Donec eleifend eget sem vitae mattis</h1>
-        <article>Donec sit amet odio in libero pretium pretium nec ac lacus. Integer pulvinar sem sed diam mattis convallis. Fusce tempor augue eu est faucibus, id sodales ante tristique. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi convallis lacinia libero, ac aliquam ipsum commodo id. Integer ultrices tempor sodales. Curabitur sit amet metus vel erat euismod elementum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi eu nisl elementum, egestas diam et, interdum nisi. Fusce vestibulum sapien tortor, eget venenatis lectus fermentum ut. Morbi consequat iaculis diam sagittis placerat. Duis mattis aliquam eros et dignissim. Cras in varius felis, eget feugiat est.</article>
-        <article>Ut id rhoncus magna. In tincidunt, nisl a porta viverra, arcu metus dapibus est, sed fringilla odio dolor nec nibh. <img class="article" src="img/football.jpg" alt="football"> Donec nec malesuada quam, at tempus magna. Donec mattis ligula lorem, et maximus orci mollis quis. Pellentesque luctus magna consectetur urna laoreet, ac bibendum nisl luctus. Vestibulum at eros maximus, ullamcorper dolor et, consectetur massa. Sed rhoncus ligula non massa fringilla, sit amet posuere elit porta. Donec molestie sodales ante, quis aliquam metus sagittis nec. Aenean nunc neque, tempor quis rhoncus sed, hendrerit in erat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus mollis feugiat enim a commodo. </article>
-        <article>Vivamus luctus erat ipsum,, ut ullamcorper elit bibendum ac. Integer nec tincidunt ante, ut blandit justo. Etiam non magna et diam hendrerit fermentum at ac velit. Cras blandit enim turpis, et sagittis justo fringilla a. Nunc fringilla turpis id placerat pellentesque. Mauris nec iaculis ligula, dapibus dictum felis. Donec viverra ipsum odio, a laoreet lectus finibus et. Nam eget lorem euismod, facilisis quam et, dignissim leo. Sed porttitor tristique blandit. Aenean dictum scelerisque eros, at ultricies justo commodo a. Ut vitae est commodo, bibendum purus laoreet, feugiat eros. <img class="article" src="img/book.jpg" alt="book"> </article>
+        <article>Nulla auctor, nunc quis fermentum scelerisquea˚, lectus mauris rutrum metus, pulvinar scelerisque risus lectus non lectus. Sed lacinia, purus nec accumsan lobortis, sem turpis imperdiet erat, sed sagittis lacus risus non odio. Mauris commodo elementum commodo. Pellentesque in sapien in velit pellentesque vulputate. Donec at imperdiet ipsum, at pretium magna. Sed eget auctor sem. Curabitur vel sem nibh.</article>
+        <article>Aenean ultricies felis sed erat elementum auctor. Proin eu molestie dui. Donec malesuada efficitur diam, id finibus ex egestas quis.<img class="article" src="IMG/football.jpg"> Aenean aliquam in arcu id semper. Suspendisse potenti. Ut egestas eleifend metus, in accumsan libero sollicitudin at. Duis a eleifend sem, quis porta tellus. Fusce rhoncus cursus commodo. Suspendisse non varius ex. Nunc nisl nisi, semper nec arcu eget, fermentum viverra massa.</article>
+        <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae suscipit mi. Ut lobortis tristique metus, nec sollicitudin felis. Nam et elementum elit. Sed et posuere dui. Integer interdum laoreet libero. Nulla sollicitudin nibh non turpis consectetur egestas. Fusce laoreet rhoncus risus, nec egestas dolor bibendum et. Suspendisse vel convallis risus. Nulla facilisi. Cras laoreet sapien non imperdiet condimentum.<img class="article" src="IMG/book.jpg"></article>
     </section>
-
-    <footer>
-        <a href="">Over ons</a><br>
-        <a href="">Contact</a><br>
-        <a href="">Producten</a><br><br>
-        Copyright &copy; 2016
-
-    </footer>
-
 </div>
+<footer>
+    <a href="">Over ons</a><br>
+    <a href="">Producten</a><br>
+    <a href="">Contact</a><br><br>
+    Copyright &copy; 2020
+</footer>
 </body>
-
 </html>
