--- a/h05/Login.html
+++ b/h05/Login.html
@@ -1,70 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="StyleSheet.css">
     <meta charset="UTF-8">
-    <title>Hoofdstuk 5</title>
+    <title>Login Burton Education</title>
+    <link href="https://fonts.googleapis.com/css?family=Arial" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Arial', Arial;
+            background-color: rgb(251, 235, 235);
+        }
+        form ul{
+            list-style-type: none;
+            padding: 0;
+        }
+        form ul li{
+            padding: 10px;
+        }
+        form ul li input{
+            position: absolute;
+            left: 150px;
+        }
+    </style>
 </head>
 <body>
-
-<form action="http://www.savatarian.com/html5/form.php" method="get">
+<form method="post" action="https://www.savatarian.com/html5/form.php">
     <ul>
         <li>
-            <h2>Burton Education</h2>
-            <span class="verplicht">* Verplicht veld</span>
+            <h2>Login Burton Education</h2>
         </li>
         <li>
-            <label for="Voornaam"> Voornaam:</label>
-            <input type="text" name="Voornaam" id="Voornaam" required>
+            <label for="voornaam">Voornaam:</label>
+            <input type="text" name="voornaam"/>
         </li>
         <li>
-            <label for="Achternaam">Achternaam:</label>
-            <input type="text" name="Achternaam" id="Achternaam" required>
+            <label for="achternaam">Achternaam:</label>
+            <input type="text" name="achternaam"/>
         </li>
         <li>
-            <input type="radio" name="Geslacht" value="man"/>
-            &nbsp;Man
-        </li>
-        <li>
-            <input type="radio" name="Geslacht" value="vrouw"/>
-            &nbsp;Vrouw
-        </li>
-        <li>
-            <label>Kleur oog</label><select name="kleur-ogen">
-                <option>Groen</option>
-                <option>Blauw</option>
-                <option>Bruin</option>
-            </select>
-        </li>
-        <li>
-            <label for="Birth">Date of birth</label>
-            <input type="date" id="Birth" name="Date of birth">
-        </li>
-        <li>
-            <label for=textarea>Text Area</label>
-            <input type="text" id="textarea" name="Text Area">
-        </li>
-        <li>
-            <label for="CheckBox">Hamburger</label>
-            <input type="checkbox" id="CheckBox" name="Check box">
-        </li>
-        <li>
-            <label for="CheckBox">Kipnugget</label>
-            <input type="checkbox" id="CheckBox" name="Check box">
-        </li>
-        <li>
-            <label for="CheckBox">Pizza</label>
-            <input type="checkbox" id="CheckBox" name="Check box">
-        </li>
-
-        <li>
-            <input type="submit" name="Knop">
-        </li>
-        <li>
-            <button type="button">Cancel</button>
+            <input type="submit" name="knop"/>
         </li>
     </ul>
 </form>
-
 </body>
 </html>
