--- a/h05/Formulier.html
+++ b/h05/Formulier.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-<form action="http://voormbo.nl/courses/html5/formtest.php" method="post">
+<form action="https://www.savatarian.com/html5/form.php" method="post">
     <H2>Formulier Burton Education</h2>
     <div class="secone">
         <ul class="listone">
