--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <title>HTML</title>
 </head>
 <body>
-
-<h1>Software development</h1>
+<h1>HTML</h1>
 <h2>Pjotr de Vos.</h2>
-<a  href="../HTML/index2.html">HTML</a> <br>
-<a  href="../JavaScript/index.html">JavaScript</a>
-
+<a  href="h01/index.html">Hoofdstuk 1</a>
+<a  href="ho2/Begin.html">Hoofdstuk 2</a>
+<a  href="h03/index.html">Hooftstuk 3</a>
+<a  href="h04/index.html">Hoofdstuk 4</a>
+<a  href="h05/index.html">Hoofdstuk 5</a>
+<a  href="h06/Index.html">Hoofdstuk 6</a>
+<a  href="h07/index.html">Hoofdstuk 7</a>
 </body>
 </html>
