--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 <a  href="h05/index.html">Hoofdstuk 5</a>
 <a  href="h06/Index.html">Hoofdstuk 6</a>
 <a  href="h07/index.html">Hoofdstuk 7</a>
+<a  href="CSS%20Challenge/index.html">Challenge</a>
 </body>
 </html>
