--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 <a  href="h06/Index.html">Hoofdstuk 6</a>
 <a  href="h07/index.html">Hoofdstuk 7</a>
 <a  href="CSS%20Challenge/index.html">Challenge</a>
+<a  href="Inleiding/index.html">Inleiding</a>
 </body>
 </html>
