--- a/Inleiding/index.html
+++ b/Inleiding/index.html
@@ -16,7 +16,7 @@
         <td>Database Ontwerpen</td>
         <td>Fullstack Project</td>
         <td>Game development</td>
-        <td>Voorbereiding HBO</td>
+        <td>Ondernemend Gedrag</td>
         <td>Verdieping software</td>
         <td>Digitale Vaardigheden</td>
         <td>BPV 1</td>
