--- a/Inleiding/index.html
+++ b/Inleiding/index.html
@@ -34,6 +34,17 @@
         <td>720 uur</td>
     </tr>
     <tr>
+        <td>Wanneer?</td>
+        <td>6 sep t/m 20 sep</td>
+        <td>20 sep t/m 4 oct</td>
+        <td>4 oct t/m 14 oct</td>
+        <td>14 oct t/m 24 oct</td>
+        <td>24 oct t/m 4 nov</td>
+        <td>4 nov t/m 14 nov</td>
+        <td>-</td>
+        <td>-</td>
+    </tr>
+    <tr>
         <td>Wie kan je helpen?</td>
         <td>Joey/Rick</td>
         <td>Joey/Rick</td>
@@ -61,7 +72,7 @@
     <tr>
         <td>1 jaar, Ik heb 5 hoofdstukken in die tijd afgemaakt en ga "Database Ontwerpen" Opnieuw beginnen omdat ik het erg moeilijk vind en graag goed wil kunnen.</td>
         <td>Een beetje, ik heb mijn momenten gehad waar ik niks deed en een beetje achter liep. Ik loop op het moment op schema.</td>
-        <td>Ik vind dat ik mijn HTML/CSS erg goed heb gedaan en daar wel trots op ben. Ik vond mijn game development ook wel goed ik vond het een erg leuke keuzevak en wil er graag in verdiepen.</td>
+        <td>Ik vind dat ik mijn HTML/CSS erg goed heb gedaan en daar wel trots op ben. Ik vond mijn game development ook wel goed ik vond het een erg leuke keuzevak en wil er graag in verdiepen tijdens m'n stage.</td>
         <td>Mijn inzet, Ik vind persoonijk dat ik mijn inzet flink moet verbeteren deze was erg slecht het eerste jaar met corona.</td>
         <td>Game development, en app's maken deze dingen lijken mij erg leuk om te doen er zou me er graag in willen verdiepen.</td>
         <td>Ik zou dat nog niet goed weten, Ik zou het graag een leuke stagen vinden met leuke mensen waar ik mee werk. Waar ik lekker kan zitten en m'n ding doen (Graag iets met game development) dit is wat ik wel graag zou willen.</td>
