--- a/Inleiding/index.html
+++ b/Inleiding/index.html
@@ -41,8 +41,8 @@
         <td>14 oct t/m 24 oct</td>
         <td>24 oct t/m 4 nov</td>
         <td>4 nov t/m 14 nov</td>
-        <td>-</td>
-        <td>-</td>
+        <td>To be decided</td>
+        <td>To be decided</td>
     </tr>
     <tr>
         <td>Wie kan je helpen?</td>
